--- a/react-facebook-frontend/src/components/CustomInput/index.css
+++ b/react-facebook-frontend/src/components/CustomInput/index.css
@@ -1,4 +1,4 @@
-.css-q0jhri-MuiInputBase-root-MuiInput-root  {
+/* .css-q0jhri-MuiInputBase-root-MuiInput-root  {
     border : '2px solid ' !important ;
     color:  'green';
     padding: '20px' !important;
@@ -6,4 +6,4 @@
 
 .test {
     border: '1px solid ';
-}
+} */
